get all updated try 2